--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <section>
         <div>
             <h1 class="text-center font-bold text-4xl mt-20">We Have</h1>
-            <div class="grid grid-cols-4 flex space-x-4  text-center mt-10 mx-14 gap-4">
+            <div class="grid grid-cols-4 space-x-4  text-center mt-10 mx-14 gap-4">
                 <div class="bg-slate-100 rounded-lg shadow-green-200 shadow-xl py-8">
                     <img class="px-28" src="icon/book.png" alt="">
                     <h1 class="mt-6 text-3xl font-semibold">1500+ Referance</h1>
@@ -76,27 +76,27 @@
         <div class="grid grid-cols-3 gap-6 px-24 mt-11 ">
             <div class="bg-gray-100 rounded-lg py-8 px-5 shadow-green-200 shadow-xl">
                 <img class="h-52 w-80 rounded-xl" src="video/oop2.png" alt="">
-                <h1 class="text-2xl font-medium mt-5">Modern Psychology</h1>
+                <h1 class="text-2xl font-medium mt-5">Python</h1>
                 <p class="mt-3">Designation</p>
-                <button class="bg-green-500 text-white py-1 px-5 rounded-full text-lg font-semibold hover:bg-green-700 mt-5 ">Buy COurse</button>
+                <button class="bg-green-500 text-white py-1 px-5 rounded-full text-lg font-semibold hover:bg-green-700 mt-5 ">Get Started</button>
                 <div class="flex pt-3 font-medium">
                     <span><i class="fa-solid fa-calendar-days"></i> Start 20 April, 2021</span>
                 </div>
             </div>
             <div class="bg-gray-100 rounded-lg py-8 px-5 shadow-xl shadow-green-200">
                 <img class="h-52 w-80 rounded-xl" src="video/computer network.jpeg" alt="">
-                <h1 class="text-2xl font-medium mt-5">Modern Psychology</h1>
+                <h1 class="text-2xl font-medium mt-5">Computer Network</h1>
                 <p class="mt-3">Designation</p>
-                <button class="bg-green-500 text-white py-1 px-5 rounded-full text-lg font-semibold hover:bg-green-700 mt-5 ">Buy COurse</button>
+                <button class="bg-green-500 text-white py-1 px-5 rounded-full text-lg font-semibold hover:bg-green-700 mt-5 ">Get Started</button>
                 <div class="flex pt-3 font-medium">
                     <span><i class="fa-solid fa-calendar-days"></i> Start 20 April, 2021</span>
                 </div>
             </div>
             <div class="bg-gray-100 rounded-lg py-8 px-5 shadow-xl shadow-green-200">
                 <img class="h-52 w-80 rounded-xl" src="video/database.jpeg"alt="">
-                <h1 class="text-2xl font-medium mt-5">Modern Psychology</h1>
+                <h1 class="text-2xl font-medium mt-5">Database</h1>
                 <p class="mt-3">Designation</p>
-                <button class="bg-green-500 text-white py-1 px-5 rounded-full text-lg font-semibold hover:bg-green-700 mt-5 ">Buy COurse</button>
+                <button class="bg-green-500 text-white py-1 px-5 rounded-full text-lg font-semibold hover:bg-green-700 mt-5 ">Get Started</button>
                 <div class="flex pt-3 font-medium">
                     <span><i class="fa-solid fa-calendar-days"></i> Start 20 April, 2021</span>
                 </div>
@@ -105,29 +105,34 @@
     </section>
     <!-- testimonial -->
     <section>
-        <h1 class="text-center font-bold text-4xl mt-20 ">
-            Testimonial
-        </h1>
-       <div class="flex mt-14 px-80 gap-5">
-        <div class="w-24 h-24">
-            <img class="rounded-full" src="Photos/Nahin.jpeg" alt="">
+        <h1 class="text-center text-3xl font-bold mt-14">Testimonial</h1>
+        <div class="mt-10 grid grid-cols-3 gap-5 px-14 border-spacing-8">
+            <div class="border-dotted border-4 border-green-500 p-10">
+                <p>"This helped me a lot during my exams."</p>
+                <h1 class="mt-4 font-bold">- Nafiz</h1>
+                <p>Student at <a class="text-green-600" href="https://daffodilvarsity.edu.bd/"><u>Daffodil Intenational University</u></a></p>
+            </div>
+            <div class="border-dotted border-4 border-green-500 p-4">
+                <p>"As a teacher I often get busy in official tasks. I can make quiz on any given topic almost instantly on this site."</p>
+                <h1 class="mt-4 font-bold">- Md. Shovon Islam</h1>
+                <p>Lecturer at <a class="text-green-600" href="https://daffodilvarsity.edu.bd/"><u>Bangladesh University</u></a></p>
+            </div>
+            <div class="border-dotted border-4 border-green-500 p-4">
+                <p>"I can not attend class regularly for my part-time job. As I miss lectures, it becomes so hard to find accurate syllabus and materials on exam nights. This website is a savior for me."</p>
+                <h1 class="mt-4 font-bold">- Nahin</h1>
+                <p>Student at <a class="text-green-600" href="https://daffodilvarsity.edu.bd/"><u>DIU</u></a></p>
+            </div>
         </div>
-        <div>
-            <p class="mt-2 font-medium">
-                There are many variations of passages of Lorem Ipsum available, but the <br>
-                majority have suffered alteration in some form, by injected humour, <br>
-               
-               or randomised words which don't look even slightly believable.</p>
-        </div>
-       </div>
     </section>
 
-<footer class="bg-gray-800">
-        <div class="flex justify-center col-footer col-md-3 col-xs-6">
-            <a href="https://play.google.com/store" target="_blank">
-                <img class="h-60 w-40" src="./images/png-transparent-google-play-computer-icons-android-google-text-label-logo-removebg-preview.png">
-                </a>
-        </div>
+<footer class="bg-gray-800 mt-16">
+    <!-- <div class="text-white text-center">
+        <p class="mt-10"> You want my property, you can't have</p>
+        <h1>-Tony Stark</h1>
+    </div> -->
+        <div class="justify-center flex col-footer col-md-3 col-xs-6">
+            <a href="https://play.google.com/store/apps"><img class="h-60 w-60" src="images/png-transparent-google-play-computer-icons-android-google-text-label-logo-removebg-preview.png" alt=""></a>
+         </div>
 
         <div class="text-white flex justify-center gap-64">
             <div class="col-footer col-md-4 col-xs-6">
@@ -148,11 +153,9 @@
             </div>
         </div>
 
-        <div class="text-white flex justify-center mt-10">
-            <p>&copy; 11th Lesson. All rights reserved. <br> </p>
-            <div>
-               <br> You want my property, you can't have <br> -Tony Stark
-            </div>
+        <div class="text-white text-center mt-10">
+            <hr class="border-gray-600 mb-4 border-dotted mx-10">
+            <p class="font-bold mb-3">&copy; 11th Lesson. All rights reserved.</p>
         </div>
  </footer>
 
