link and add file

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
 </head>
 <body>
-    <header class="bg-green-100 h-screen">
+    <header class="bg-green-100 ">
         <!-- navber -->
         <nav class="flex justify-between bg-green-500">
             <div>
@@ -20,11 +20,11 @@
                 </div>
                 <div>
                     <ul class="flex gap-11 font-medium mt-10 mr-20 items-center">
-                        <li><a href="">Dashbord</a></li>
-                        <li><a href="">Quiz</a></li>
-                        <li><a href="">Publication</a></li>
+                        <li><a href="deshboard.html">Dashboard</a></li>
+                        <li><a href="quiz.html">Quiz</a></li>
+                        <li><a href="publication.html">Publication</a></li>
                         <li><a href="">Help</a></li>
-                        <li class="bg-black text-white px-4 py-2 rounded-full hover:bg-green-700"><a href="">Sign Up</a></li>
+                        <li class="bg-black text-white px-4 py-2 rounded-full hover:bg-green-700"><a href="sign-up.html">Sign Up</a></li>
                     </ul>
                 </div>
         </nav>
@@ -35,7 +35,9 @@
                     <h1 class="font-extrabold text-4xl mb-10"><span class="auto-type"></span></h6>
                     </h1>
                     <p class="mb-6">It will significantly enhance your readiness for exams by providing accessible, structured, and targeted study resources.</p>
-                    <button class="bg-green-600 text-white py-3 px-8 rounded-full text-lg font-semibold hover:bg-green-700 ">Log In</button>
+                    <a href="login.html">
+                        <button class="bg-green-600 text-white py-3 px-8 rounded-full text-lg font-semibold hover:bg-green-700 ">Log In</button>
+                    </a>
                 </div>
                 <div class="mr-20 mt-10">
                     <img src="images/Screenshot_2024-10-17_at_11.25.37_PM-removebg-preview.png" alt="">
@@ -126,10 +128,6 @@
     </section>
 
 <footer class="bg-gray-800 mt-16">
-    <!-- <div class="text-white text-center">
-        <p class="mt-10"> You want my property, you can't have</p>
-        <h1>-Tony Stark</h1>
-    </div> -->
         <div class="justify-center flex col-footer col-md-3 col-xs-6">
             <a href="https://play.google.com/store/apps"><img class="h-60 w-60" src="images/png-transparent-google-play-computer-icons-android-google-text-label-logo-removebg-preview.png" alt=""></a>
          </div>
@@ -155,7 +153,9 @@
 
         <div class="text-white text-center mt-10">
             <hr class="border-gray-600 mb-4 border-dotted mx-10">
-            <p class="font-bold mb-3">&copy; 11th Lesson. All rights reserved.</p>
+            <div class=" bg-green-500 my-5 font-bold">
+                <p class="">&copy; 11th Lesson. All rights reserved.</p>
+            </div>
         </div>
  </footer>
 
@@ -172,3 +172,7 @@
 
 </body>
 </html>
+
+<div class="#84cc16">
+    <H1>Nahin</H1>
+    </div>
