--- a/deshboard.html
+++ b/deshboard.html
@@ -231,7 +231,8 @@
             </div>
             <div>
                 <ul class="flex gap-11 font-medium mt-10 mr-20 items-center">
-                    <li><a href="">Dashbord</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="">Dashbaord</a></li>
                     <li><a href="quiz.html">Quiz</a></li>
                     <li><a href="publication.html">Publication</a></li>
                     <li><a href="">Help</a></li>
@@ -315,7 +316,7 @@
 
    
 
-    <footer class="mt-20">
+    <footer class="mt-20 bg-green-600">
         <p>&copy; 2024 11th Lesson. All rights reserved.</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
