--- a/publication.html
+++ b/publication.html
@@ -20,11 +20,12 @@
             </div>
             <div>
                 <ul class="flex gap-11 font-medium mt-10 mr-20 items-center">
-                    <li><a href="">Dashbord</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="deshboard.html">Dashbord</a></li>
                     <li><a href="quiz.html">Quiz</a></li>
-                    <li><a href="">Publication</a></li>
-                    <li><a href="">Help</a></li>
-                    <li class="bg-black text-white px-4 py-2 rounded-full hover:bg-green-700"><a href="sign-up.html">Sign Up</a></li>
+                    <li><a href="publication.html">Publication</a></li>
+                    <li><a href="help.html">Help</a></li>
+                    <li class="bg-black text-white px-4 py-2 rounded-full hover:bg-green-700"><a href="sign-up.html">Log out</a></li>
                 </ul>
             </div>
     </nav>
