--- a/deshboard.html
+++ b/deshboard.html
@@ -207,18 +207,6 @@
             }
         }
 
-
-
-
-
-
-
-
-
-
-
-
-
     </style>
 </head>
 
@@ -236,7 +224,7 @@
                     <li><a href="quiz.html">Quiz</a></li>
                     <li><a href="publication.html">Publication</a></li>
                     <li><a href="">Help</a></li>
-                    <li class="bg-black text-white px-4 py-2 rounded-full hover:bg-green-700"><a href="sign-up.html">Log Out</a></li>
+                    <li class="bg-black text-white px-4 py-2 rounded-full hover:bg-green-700"><a href="index.html">Log Out</a></li>
                 </ul>
             </div>
     </nav>
@@ -308,7 +296,7 @@
                 <label for="searchTopic" class="form-label">Search Topic</label>
                 <div class="input-group">
                     <input type="text" class="form-control" id="searchTopic" placeholder="Enter topic to search">
-                    <button class="btn btn-primary" type="button" ><a href="./Ddashboard.html">Search</a></button>
+                    <button class="btn btn-primary" type="button" ><a href="deshboard-search.html">Search</a></button>
                 </div>
             </div>
         </div>
