--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
                 <a href="#" class="text-sm text-blue-500 hover:underline">Forgot Password?</a>
             </div>
             <a href="deshboard.html">
-                <button class="bg-green-600 text-white  text-lg font-semibold hover:bg-green-700 w-full "><a href="deshboard.html">Log In</a></button>
+                <button class="bg-green-600 text-white  text-lg font-semibold hover:bg-green-700 w-full rounded-md py-2 "><a href="deshboard.html">Log In</a></button>
             </a>
         </form>
         <p class="mt-4 text-sm text-center text-gray-600">Don't have an account? 
