--- a/publication.html
+++ b/publication.html
@@ -25,7 +25,7 @@
                     <li><a href="quiz.html">Quiz</a></li>
                     <li><a href="publication.html">Publication</a></li>
                     <li><a href="help.html">Help</a></li>
-                    <li class="bg-black text-white px-4 py-2 rounded-full hover:bg-green-700"><a href="sign-up.html">Log out</a></li>
+                    <li class="bg-black text-white px-4 py-2 rounded-full hover:bg-green-700"><a href="index.html">Log out</a></li>
                 </ul>
             </div>
     </nav>
