--- a/sign-up.html
+++ b/sign-up.html
@@ -32,8 +32,8 @@
             </div>
             <div class="mt-6">
                     <button type="submit" 
-                    class="w-full bg-blue-600 text-white py-2 rounded-md hover:bg-blue-700">
-                    <a href="index.html">Sign up</a>
+                    class="w-full bg-green-600 text-white py-2 rounded-md hover:bg-green-700">
+                    <a href="deshboard.html">Sign up</a>
                 </button>
             </div>
             <p class="text-sm text-center text-gray-600 mt-4">
