some file added

--- a/index.html
+++ b/index.html
@@ -158,32 +158,31 @@
         </div>
     </section>
 
-<footer class="bg-gray-800 mt-16">
-        <div class="justify-center flex col-footer col-md-3 col-xs-6">
-            <a href="https://play.google.com/store/apps"><img class="h-60 w-60" src="images/png-transparent-google-play-computer-icons-android-google-text-label-logo-removebg-preview.png" alt=""></a>
-         </div>
-
-        <div class="text-white flex justify-center gap-64">
+<footer class="bg-gray-800 mt-16 max-h-screen {sm:grid grid-cols-3}">
+        <div class="text-white flex justify-center gap-44 items-center p-10">
+            <div class=" col-footer col-md-3 col-xs-6">
+                <a href="https://play.google.com/store/apps"><img class="h-60 w-60" src="images/png-transparent-google-play-computer-icons-android-google-text-label-logo-removebg-preview.png" alt=""></a>
+             </div>
             <div class="col-footer col-md-4 col-xs-6">
-                <h3 class="text-3xl font-medium text-fuchsia-800 mb-4">Contacts</h3>
+                <h3 class="text-3xl font-medium text-yellow-500 mb-4">Contacts</h3>
                 <p class="contact-us-details">
                 <b>Address:</b> Sir Nafiz State, Olympus Mons, Mars<br />
                 <b>Phone:</b> +8801317147896<br />
-                <b>Email:</b> <a href="mailto:getintoutch@yourcompanydomain.com">nafiz@gmail.com</a>
+                <b>Email:</b> <a href="mailto:getintoutch@yourcompanydomain.com"><u class="text-yellow-400">nafiz@gmail.com</u></a>
                 </p>
             </div>  
 
             <div class="col-footer col-md-2 col-xs-6">
-                <h3 class="text-3xl font-medium text-fuchsia-800 mb-4">Follow Us</h3>
+                <h3 class="text-3xl font-medium text-yellow-500 mb-4">Follow Us</h3>
                 <ul class="flex justify-center gap-14">
-                    <li><a class="h-10 w-10" href="https://www.facebook.com/beyounafiz"><i class="fa-brands fa-facebook"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
+                    <li><a class="text-3xl" href="https://www.facebook.com/beyounafiz"><i class="fa-brands fa-facebook"></i></a></li>
+                    <li><a class="text-3xl" href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
                 </ul>
             </div>
         </div>
 
         <div class="text-white text-center mt-10">
-            <hr class="border-gray-600 mb-4 border-dotted mx-10">
+            <hr class="border-gray-600 mb-6 border-dotted mx-10">
             <div class=" bg-green-500 py-3 font-bold">
                 <p class="">&copy; 11th Lesson. All rights reserved.</p>
             </div>
