--- a/quiz.html
+++ b/quiz.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 
-<body class="bg-gray-100 font-sans m-0 p-0">
+<body class="bg-gray-50 font-sans h-screen ">
     <nav class="flex justify-between bg-green-500">
         <div>
             <div class="w-20 my-5 ml-40">
@@ -127,7 +127,9 @@
                 </label>
             </div>
     
-            <button class="bg-green-500 submit-btn text-white py-3 px-6 mt-4 rounded-md hover:bg-gray-600">Submit Quiz</button>
+            <a href="submit.html">
+                <button class="bg-green-500 submit-btn text-white py-3 px-6 mt-4 rounded-md hover:bg-gray-600">Submit Quiz</button>
+            </a>
         </div>
 
         <!-- Teacher Create Question Section -->
