--- a/help.html
+++ b/help.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body class="bg-green-100">
+<body class="h-screen">
     <nav class="flex justify-between bg-green-500">
         <div>
             <div class="w-20 my-3 ml-40">
@@ -25,40 +25,65 @@
                 </ul>
             </div>
     </nav>
-</body>
 
-<footer class="bg-gray-800">
-    <div class="justify-center flex col-footer col-md-3 col-xs-6">
-        <a href="https://play.google.com/store/apps"><img class="h-60 w-60" src="images/png-transparent-google-play-computer-icons-android-google-text-label-logo-removebg-preview.png" alt=""></a>
-     </div>
-
-    <div class="text-white flex justify-center gap-64">
-        <div class="col-footer col-md-4 col-xs-6">
-            <h3 class="text-4xl font-medium text-fuchsia-800 mb-4">Contacts</h3>
-            <div class="text-2xl">
-                <p class="contact-us-details">
-                    <b>Address:</b> Sir Nafiz State, Olympus Mons, Mars<br />
-                    <b>Phone:</b> +8801317147896<br />
-                    <b>Email:</b> <a href="mailto:getintoutch@yourcompanydomain.com" class="text-green-600"><u>nafiz@gmail.com</u></a>
-                    </p>
+    <div class="bg-gray-900 text-white">
+        <div class="container mx-auto py-16 px-4 flex flex-col lg:flex-row justify-between items-center lg:items-start">
+            <!-- Left Section: Contact Information -->
+            <div class="p-8">
+                <div class="mt-10">
+                    <h3 class="text-4xl font-bold text-yellow-500 mb-4">Contacts</h3>
+                        <p class="contact-us-details">
+                        <b>Address:</b> Sir Nafiz State, Olympus Mons, Mars<br />
+                        <b>Phone:</b> +8801317147896<br />
+                        <b>Email:</b> <a href="mailto:getintoutch@yourcompanydomain.com"><u class="text-yellow-400">nafiz@gmail.com</u></a>
+                        </p>
+                </div>
+                <div class="mt-20">
+                    <h3 class="text-4xl font-bold mb-4 text-yellow-400">Follow Us</h3>
+                    <div class="flex space-x-4 mt-5 gap-12">
+                        <a href="#" class="text-4xl"><i class="fab fa-facebook"></i></a>
+                        <a href="#" class="text-4xl"><i class="fab fa-twitter"></i></a>
+                    </div>
+                </div>
             </div>
-        </div>  
-
-        <div class="col-footer col-md-2 col-xs-6">
-            <h3 class="text-4xl font-medium text-fuchsia-800 mb-10">Follow Us</h3>
-            <ul class="flex justify-center gap-14">
-                <li><a class="text-3xl" href="https://www.facebook.com/beyounafiz"><i class="fa-brands fa-facebook"></i></a></li>
-                <li><a class="text-3xl" href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
-            </ul>
+    
+            <!-- Right Section: Get in Touch Form -->
+            <div class="w-full lg:w-1/2  p-8 rounded-lg shadow-lg text-gray-800">
+                <h2 class="text-4xl text-yellow-500 text-center font-bold mb-6">Get in Touch</h2>
+                <form action="#" method="POST">
+                    <div class="mb-4">
+                        <input type="text" name="fullName" placeholder="Full Name" 
+                               class="w-full p-3 border border-teal-500 rounded focus:outline-none focus:border-teal-700"/>
+                    </div>
+                    <div class="mb-4">
+                        <input type="email" name="email" placeholder="Email" 
+                               class="w-full p-3 border border-teal-500 rounded focus:outline-none focus:border-teal-700"/>
+                    </div>
+                    <div class="mb-4">
+                        <input type="tel" name="phone" placeholder="Phone Number" 
+                               class="w-full p-3 border border-teal-500 rounded focus:outline-none focus:border-teal-700"/>
+                    </div>
+                    <div class="mb-4">
+                        <textarea name="message" placeholder="Message" rows="4"
+                                  class="w-full p-3 border border-teal-500 rounded focus:outline-none focus:border-teal-700"></textarea>
+                    </div>
+                    <button type="submit" 
+                            class="w-full bg-green-500 text-white p-3 rounded hover:bg-green-700">
+                        Send
+                    </button>
+                </form>
+            </div>
         </div>
     </div>
 
-    <div class="text-white text-center mt-10">
-        <hr class="border-gray-600 mb-4 border-dotted mx-10">
+
+<footer >
+    <div class="text-white text-center">
         <div class=" bg-green-500 py-3 font-bold">
             <p class="">&copy; 11th Lesson. All rights reserved.</p>
         </div>
     </div>
 </footer>
 
+</body>
 </html>
